close button aligned, size fixed

--- a/shikicinema.css
+++ b/shikicinema.css
@@ -22,6 +22,8 @@
     font-size: 25pt;
 
     z-index: 6;
+    width: calc(5% - 5px);
+    height: calc(width);
 }
 
 iframe {
